# free-exercise-graph

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  LESSONS_LEARNED.md  README.md  Resistance Exercise Joint Action Vocabulary.md  STATUS.md  TODO.md  constants.py  feg_site.py  free_exercise_graph.pptx  graph_explorer.ipynb  mcp_server.py  pipeline_playbook.ipynb  pyproject.toml  refresh.sh  run_notes.md  sync_namespaces.py  test_shacl.py  transcript.txt
app/: README.md  app.js  build_observatory.py  build_site.py  index.html  observatory.json  style-reference.html  style.css  vocab.json
config/: build_settings.json  similarity_weights.json  substitute_ui_settings.json
docs/: DESIGN.md  app_field_provenance.md  full_run_playbook.md  index.md  ontology_design.md  quality_surfaces.md  quickstart_app.md  quickstart_graph.md  quickstart_mcp.md  reconciliation_example.md  repo_map.md  sqlite_data_model.md  system_contracts.md  triage_workflow.md  troubleshooting.md
eda/: category.json  equipment.json  force.json  level.json  mechanic.json  primaryMuscles.json  secondaryMuscles.json
enrichment/: __init__.py  _vocab.py  prompt_builder.py  prompt_template.md  providers.py  schema.py  service.py
evals/: INSTRUCTIONS.md  annotate.py  annotate_test.py  build_gold_sheet.py  eval.py  gold_annotation.xlsx  seed.json
ontology/: all.jsonld  all.ttl  catalog.ttl  equipment.ttl  exercise_styles.ttl  involvement_degrees.ttl  joint_actions.ttl  laterality.ttl  movement_patterns.ttl  muscles.ttl  ontology.ttl  planes_of_motion.ttl  shapes.ttl  zip.py  (+1 more)
(+3331 files in other folders)
