[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "free-exercise-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.0.0",
    "mcp>=1.26.0",
    "pyoxigraph>=0.5.0",
    "pyshacl>=0.31.0",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.0",
    "rdflib>=7.6.0",
    "tenacity>=8.2.0",
    "rapidfuzz>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
