[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "free-exercise-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.0.0",
    "mcp>=1.26.0",
    "networkx>=3.4.0",
    "oxrdflib>=0.5.0",
    "pandas>=2.2.0",
    "pyoxigraph>=0.5.0",
    "pyshacl>=0.31.0",
    "python-louvain>=0.16",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.0",
    "rdflib>=7.6.0",
    "tenacity>=8.2.0",
    "rapidfuzz>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["pipeline", "enrichment", "scripts"]
py-modules = ["constants", "mcp_server", "sync_namespaces", "test_shacl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
